--- a/views/search.jade
+++ b/views/search.jade
@@ -2,6 +2,7 @@ extends ../node_modules/jade-bootstrap/_bootstrap.jade
 append styles
 	// Custom styles for this template
 	link(href='stylesheets/jumbotron.css', rel='stylesheet', type='text/css')
+	link(href='stylesheets/style.css', rel='stylesheet', type='text/css')
 block body
 	nav.navbar.navbar-inverse.navbar-fixed-top
 		.container
@@ -15,13 +16,12 @@ block body
 			#navbar.navbar-collapse.collapse
 				form.navbar-form.navbar-right
 					.form-group
-						input.form-control(type='password', placeholder='Search...')
-					button.btn.btn-success(type='submit') Search
+					button.btn.btn-success(class='navItem' type='submit') Search
 	.jumbotron
 		.container
-			h1 Add & Edit
+			h1 Search
 			p
-				| On this page you can edit existing files in the Colenso database or upload new ones!
+				| On this page you can search through existing files in the Colenso database!
 			script(type='text/javascript').
 				var sendToHome = function(){
 					window.location = "http://localhost:3000/";
@@ -31,15 +31,20 @@ block body
 	.container
 		.row
 			.col-md-5
-				h2 Find your file to edit...
+				h2 Find your file...
 				.form-group
-					input.form-control(type='password', placeholder='Search...')
+					input.form-control(id="searchBox", class="item", type='text', placeholder='Search...')
+					button.btn.btn-success(class="item", type='submit', onclick='') Search
+
 			.col-md-5
 				h2 Or upload a new one!				
 				button.btn.btn-success(type='submit') Search
 				h3(id='file_text') No file selected.
 				button.btn.btn-success(type='submit') Upload
-		hr
+						hr
 		footer
 			p Samual Kaleb Baldwin-Holmes, Student 300292295, Victoria University, Wellington, 2016
+	form(action="/search", method="post")  
+		input(type="text", name="query")
+		input(type="submit", value="Show me!")
 	block content
